# lazyTimetrack

./: .gitignore  README.md  pyproject.toml
lazytimetrack/: timetrack.py
